# ChangeLog for app-text/sloccount
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/sloccount/ChangeLog,v 1.25 2013/06/09 18:20:11 jer Exp $

  09 Jun 2013; Jeroen Roovers <jer@gentoo.org> sloccount-2.26-r2.ebuild:
  Fix test failure when sloccount is not yet installed (bug #362045).

  16 Oct 2012; Christoph Junghans <ottxor@gentoo.org> sloccount-2.26-r2.ebuild:
  added prefix support (bug #435258)

*sloccount-2.26-r2 (12 Oct 2010)

  12 Oct 2010; Jeroen Roovers <jer@gentoo.org> +sloccount-2.26-r2.ebuild:
  Remove silly DEPEND. Respect CC (bug #243752), CFLAGS, LDFLAGS.

  09 Dec 2008; Raúl Porcel <armin76@gentoo.org> sloccount-2.26-r1.ebuild:
  Add ~alpha wrt #250343

  14 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  -files/sloccount-2.22-libexec.patch, -sloccount-2.22.ebuild,
  -sloccount-2.26.ebuild:
  Cleanup old ebuilds.

  14 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  sloccount-2.26-r1.ebuild:
  Cleanup.

  14 Oct 2008; Robin H. Johnson <robbat2@gentoo.org> sloccount-2.22.ebuild,
  sloccount-2.26.ebuild, sloccount-2.26-r1.ebuild:
  Bug #241264 fix docdir.

  01 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> sloccount-2.22.ebuild,
  sloccount-2.26.ebuild, sloccount-2.26-r1.ebuild:
  Fix license to read GPL-2.

  11 Jun 2007; Fabian Groffen <grobian@gentoo.org> sloccount-2.26-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  29 Oct 2005; Fabian Groffen <grobian@gentoo.org> sloccount-2.26-r1.ebuild:
  Marked ~ppc-macos (bug #109435)

  14 Aug 2005; Luis Medinas <metalgod@gentoo.org> sloccount-2.26-r1.ebuild:
  Stable on AMD64.

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  sloccount-2.26-r1.ebuild:
  Stable on ppc.

  12 Aug 2005; Robin H. Johnson <robbat2@gentoo.org>
  sloccount-2.26-r1.ebuild:
  2.26-r1 stable on x86.
