@@ -5,13 +5,17 @@ AUX sloccount-2.26-coreutils-tail-n-fix.patch 468 SHA256 79ef08b0ba5f892878fe410
 AUX sloccount-2.26-libexec.patch 2293 SHA256 c098bc1ba364a43cfb39805f6d7c46c7f3d72f4969c0bfb2dd4d62ef750df1f7 SHA512 87101dc6c6632d38ff25b842b3342ee7caae0a926ce7c62f07360691a1494f8fefb8a039743d6cc49e3ca53a2eb179a06a97763ff5cf6224056a0916317afa35 WHIRLPOOL a09040e640099af129a5e912ccf1b8f6f09b408f6fc8b9c415254ac1d7b11783875187727b835688e930b8d4a6fdac59a1dd9112fed96a26ac85b65b029d9611
 DIST sloccount-2.26.tar.gz 190948 SHA256 fa7fa2bbf2f627dd2d0fdb958bd8ec4527231254c120a8b4322405d8a4e3d12b SHA512 ed6ab315a56dbdc86c654b94e790c9ea9e2dcad0db26b63c0973c33eb7fa634b4ade0a1f3c6ccfd5172ea95f648c1dd3b0ae2575b0aa44b3fec708c24a6aca54 WHIRLPOOL dd809909e10601ec733a7e5426183553c00c2cd25164db2d9085c975f689209067c206094caa84ef5085fc27a7188509fced271928e2d28ccb5a6b0749f7cd77
 EBUILD sloccount-2.26-r1.ebuild 1088 SHA256 afd75776079ce2b1ee2231c31b31a3377e1e5440ccc30f617d577a5c14741a70 SHA512 dd8a667c10fc467c33a555431376c36a0599ce20e6fa82fb865e183ac3e2a3d4ee6963b0007b5f7d91f91079fb8a0878f78b12a1b08f4cdcce34812efc66f254 WHIRLPOOL 421f545708e881b82bed63397238f4ca1ce3d85c94b642ae3611b6d5d2b202d79698a2c87484873a46a011100fd09ce53a211e9ef5316e5e9756aa8d28017b1e
-EBUILD sloccount-2.26-r2.ebuild 1299 SHA256 7f54f7dc8c172824ece292018151b8f04b83f5972c9fbc96050b16e92db205e2 SHA512 b17f0cfbe4f65fcfb9fc90a2416a2f0a963f4b6b9ff2e42aeb2df8e02e3e41f5de60da842e29629ccf249c1f1d0ea49495d6613cb8eb8e9ce395b90005857395 WHIRLPOOL 33c725bc95ee633c97d37e0c39c0abdecd6579ae40c95d7529337e0c480ac03eb775ffd2910e0190c16bb5927844da7549859001e20f0cbbd4985bc9b2d28532
-MISC ChangeLog 3490 SHA256 d40968087b7ad01637dbe7f2428cfc33bb594d2b5660840ed1e9a455b5452b39 SHA512 6e20ed3fc9e1bae55f9a5324b7cff7097e799f8c9221fbe56cb38063205ecaf44c67b24ae993f18fc7fd58e76c1798a7a3627eb9f6ffaf813c8ba3b2e023e51d WHIRLPOOL fd5d6a19b6cf0260c377b15357ef695774b54d30727e691f786d11680adb21df60110c105f9dd2b3ced4e22770827a9a059beb87e592892003b2d274608de186
+EBUILD sloccount-2.26-r2.ebuild 1301 SHA256 e1d502cd52840d58b70d3b416b65e392834011dc8ee7a8561a084a7c50d065c3 SHA512 49398ad5d4d59b2f7404f0dc15db75ab8f4b4c1da67e20be7c36833b7cfe03ede827b408259184d31cab9063723f8cb29459127f5ae41dd69f767b3b3905b0ff WHIRLPOOL 0f90e2ec4b77a7840f29acec2b6af7ff23a6b58982e2f9c0c4914a66bd913119c6e567e312e0b5895237aff9b48b01cbb20a201ff3cba3fa387fa537459062bc
+MISC ChangeLog 3603 SHA256 881eba742f3882303372e94edd8d9e4d08e8d95a757f97790debd0b42c4cb1ff SHA512 c03e599bfa911c3baf0d825bf20d07e82fe54ec9ad0e35152f78819d22191db0465de6a0bdb1cf78c1ddc1804196e8a24897ee1051eb9a6bfc4db2e704b0d02e WHIRLPOOL 0e3ac2cebd278ebeef5b9d778f03f66bc9337eef760e7f820f52c17612efb5e7b527aa531a7a51e9b72f94b1c38f90d716b53718b380cf3c0de1b24cc53cb7be
 MISC metadata.xml 202 SHA256 76dbb4a720140d78f0ddfb2b2782c03852169c201c1f507eb17ef4d2a82f212a SHA512 bd1c14da72bdd52e3bea3056f5b9f908c31d6915b651d15d80a0a7d26778c97cde493ae9ca4352bd313eb16ddbed9b169c6b620c7f4a9b77973f7077fa8d997c WHIRLPOOL c073cc4c903e3377c7aee652c5661a1657cc5ba70c3deb4b2d7b2d0e31a78fb8b362b2f255de3faddbf4c46250d14d2d5d39a6a13b910ad18f8d53df362163a0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlG0x1wACgkQVWmRsqeSphNthgCePpvrOwaOhkIBkjEml8N/3h1c
-MRQAnj38VfszxIZ1lESMF4HpVsSUeh8V
-=KVD4
+iQEcBAEBCAAGBQJRufiLAAoJEA2sAkrWKOU2z5sH/Rq3I1OnmQPYBLhJCXr2F/Bo
+F9lco0bLnGBYBVXC7GMAwq2Ysxc8fFDDakT35fdzTXKA9fKy57ZFnWQ3fLZhYhAq
+092TXf5jvpFi8jCC9i8mtxel00yL88FJXkNPEUiU6R8JvrVbFx7GWYS6HXvoga+u
+DMyUgKrOPA5nItRf5dizhgZ9yMUCyPlGIvDVFDmYQtI61+EK5PtnmrIVcbUepgeR
+fnjPCSGRK2vZ9rHBxWHlTN7ICxrIe5tBAQgR+ViSEpL9dqusZU4IO+tVY5FjAmG0
+s/uZYCA0RsuXacjKUSa7Jc4+/wcBm3o3cYGZZGZXadXiIj7cW9zq8SnP9bYBT4E=
+=GDb9
 -----END PGP SIGNATURE-----
