@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Geo-IP
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.71 2013/06/10 19:38:56 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.72 2013/06/13 16:35:18 zlogene Exp $
+
+  13 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> Geo-IP-1.410.0.ebuild:
+  x86 stable wrt bug #470408
 
 *Geo-IP-1.420.0 (10 Jun 2013)
 
